<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ecoCrats</string>

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string-array name="navDrawerItems">
        <item>Profile</item>
        <item>Friendlist</item>
        <item>Stores</item>
        <item>Companies</item>
        <item>Research</item>
        <item>Market</item>
        <item>World Map</item>
        <item>Bank</item>
    </string-array>
    <string-array name="friendlist_options">
        <item>Send Message</item>
        <item>Send ECOs</item>
        <item>Remove</item>
    </string-array>
    <string-array name="store_details_options">
        <item>Sell</item>
        <item>Transport</item>
    </string-array>

    <string name="login_title">Login</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="profile_title">Profile</string>
    <string name="friendlist_title">Friendlist</string>
    <string name="stores_title">Stores</string>
    <string name="countries_title">Countries</string>
    <string name="items_title">Items</string>
    <string name="message_details_title">Message Details</string>
    <string name="inbox_title">Inbox</string>
    <string name="outbox_title">Outbox</string>
    <string name="new_message_title">New Message</string>
    <string name="transport_title">Transport</string>
    <string name="settings_title">Settings</string>
    <string name="bank_title">Bank</string>
    <string name="sales_title">Sales</string>
    <string name="purchases_title">Purchases</string>
    <string name="market_title">Market</string>
    <string name="companies_title">Companies</string>
    <string name="active_transport_title">Active Transports</string>
    <string name="completed_transport_title">Completed Transports</string>

    <string name="new_password_short">New password must be at least 6 characters long</string>
    <string name="new_password_spaces">New password must not contain spaces</string>
    <string name="new_password_match">New passwords do not match</string>
    <string name="new_password_same">New password cannot be the same as the old password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="email_valid">Please enter a valid email address</string>
    <string name="delete_account">Are you sure that you want to delete your account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="quantity_0">Quantity must be greater than 0</string>
    <string name="username_short">Username must be at least 3 characters long</string>
    <string name="username_spaces">Username must not contain spaces</string>
    <string name="password_short">Password must be at least 6 characters long</string>
    <string name="password_spaces">Password must not contain spaces</string>
    <string name="password_match">The passwords do not match</string>
    <string name="quantity_select">Select quantity</string>
    <string name="add">Add</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="progressing">Processing</string>
    <string name="country">Country</string>
    <string name="capital">Capital</string>
    <string name="area">Area</string>
    <string name="population">Population</string>
    <string name="remove">Remove</string>
    <string name="username">Username</string>
    <string name="sender">Sender</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="reply">Reply</string>
    <string name="inbox">Inbox</string>
    <string name="outbox">Outbox</string>
    <string name="new_message">New</string>
    <string name="send">Send</string>
    <string name="receiver">Receiver</string>
    <string name="buy">Buy</string>
    <string name="build">Build</string>
    <string name="region_details_region">Region:</string>
    <string name="region_details_capital">Capital:</string>
    <string name="region_details_area">Area:</string>
    <string name="region_details_population">Population</string>
    <string name="region">Region</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="new_email">New Email Address</string>
    <string name="password_change">Change Password</string>
    <string name="email_change">Change Email</string>
    <string name="account_delete">Delete Account</string>
    <string name="item_select">Select Item</string>
    <string name="store_select">Select Store</string>
    <string name="friend_select">Select Friend</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="select_area">Select Area in ha</string>
    <string name="logout_confirmation">Do you really want to log out?</string>
    <string name="build_store_confirmation">Do you really want to build a Store in this Region?</string>
    <string name="forQuantity">for</string>
    <string name="credit">Credit</string>
    <string name="depts">Depts:</string>
    <string name="lend">Lend</string>
    <string name="credit_confirmation">Do you really want to raise a Loan?</string>
    <string name="select_ecos">Select ECOs</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="sales">Sales</string>
    <string name="purchases">Purchases</string>
    <string name="sell">Sell</string>
    <string name="quantity_price_select">Select Quantity and Price</string>
    <string name="receiver_choose">Please choose a Receiver</string>
    <string name="subject_enter">Please enter a Subject</string>
    <string name="message_enter">Please enter a Message</string>
    <string name="username_enter">Enter Username</string>
    <string name="new_transport">New Transport</string>
    <string name="completed">Completed</string>
    <string name="active">Active</string>
    <string name="transport_confirmation">Do you really want to send this transport?</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="not_enough_space">Not enough space in Store</string>
    <string name="transport_failed">Transport failed</string>
    <string name="loan_failed">Loan could not be raised</string>
    <string name="loan_raised">Loan successfully raised</string>
    <string name="username_exists">Username already exists</string>
    <string name="email_exists">Email address already exists</string>
    <string name="sign_up_failed">Signing up failed</string>
    <string name="user_not_found">User could not be found</string>
    <string name="message_failed">Message could not be sent</string>
    <string name="ecos_sent">ECOs successfully sent</string>
    <string name="ecos_failed">ECOs could not be sent</string>
    <string name="not_enough_ecos">You don\'t have enough ECOs</string>
    <string name="item_not_sold">Item could not be sold</string>
    <string name="user_not_friend">User is not your friend</string>
    <string name="friend_not_removed">Friend could not be removed</string>
    <string name="login_gcm">Login successful, but no GCM</string>
    <string name="login_failed">Login failed, incorred user data</string>
    <string name="db_error">DB connection error</string>
    <string name="old_password_wrong">Old password is wrong</string>
    <string name="area_not_bought">Area could not be bought</string>
    <string name="no_area">You don\'t own any area in the region</string>
    <string name="store_region">You already have a store in this region</string>
    <string name="store_failed">Store could not be built</string>
    <string name="item_added">Item has been added successfully</string>
    <string name="item_not_added">Item could not be added</string>
    <string name="user_already_friend">User is already your friend</string>
    <string name="add_yourself">You cannot add yourself as a friend</string>
    <string name="friend_not_added">Friend could not be added</string>
    <string name="item_sold">Item has been sold successfully</string>
    <string name="transport_sent">Transport has been sent</string>
    <string name="store_built">Store has been built successfully</string>
    <string name="message_sent">Message sent</string>
    <string name="password_changed">Password has been changed successfully</string>
    <string name="email_changed">Email address has been changed successfully</string>
    <string name="account_deleted">Account has been deleted</string>
    <string name="friend_removed">Friend has been removed</string>
    <string name="friend_added">Friend has been added</string>
    <string name="login_successful">Login successful</string>
    <string name="sign_up_successful">Signing up successful</string>
    <string name="no_internet">No internet connection</string>
    <string name="receiver_multiple">Receiver, Receiver, &#8230;</string>
    <string name="add_store">Add Store</string>
    <string name="store_add">Where do you want to build a store?</string>
    <string name="upgrade_store">Upgrade store</string>
    <string name="store_upgrade_confirmation">Do you really want to upgrade this store?</string>
    <string name="cost">Cost</string>
    <string name="capacity">Capacity</string>
    <string name="store_upgraded">Store has been upgraded successfully</string>
    <string name="store_upgrade_failed">Store could not be upgraded</string>
    <string name="area_bought">Area has been bought successfully</string>
    <string name="add_company">Add company</string>
    <string name="upgrade_company">Upgrade company</string>
    <string name="company">Company</string>
    <string name="plant">Plant</string>
    <string name="buy_area">Buy area</string>
    <string name="enter_price">Please enter a price</string>
    <string name="item_bought">Item has been bought successfully</string>
    <string name="item_bought_failed">Item could not be bought</string>
</resources>