<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/newMessage"
        android:icon="@mipmap/create_black"
        android:title="@string/new_message"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/send"
        android:icon="@mipmap/send_black"
        android:title="@string/send"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/reply"
        android:icon="@mipmap/reply_black"
        android:title="@string/reply"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/buy"
        android:icon="@mipmap/buy_black"
        android:title="@string/buy"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/build"
        android:icon="@mipmap/stores_black"
        android:title="@string/build"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/addItem"
        android:icon="@mipmap/add_black"
        android:title="@string/add"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/addFriend"
        android:icon="@mipmap/add_friend_black"
        android:title="@string/add"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/sendTransport"
        android:icon="@mipmap/send_black"
        android:title="@string/send"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/newTransport"
        android:icon="@mipmap/transport_black"
        android:title="@string/new_transport"
        android:visible="false"
        app:showAsAction="always"/>
</menu>