<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_username"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#fff"
        android:textColorHint="#fff"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_password"
        android:layout_below="@+id/signup_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#fff"
        android:textColorHint="#fff"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_pwconfirm"
        android:layout_below="@+id/signup_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:hint="@string/password_confirmation"
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#fff"
        android:textColorHint="#fff"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_email"
        android:layout_below="@+id/signup_pwconfirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#fff"
        android:textColorHint="#fff"/>

    <Button
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/sign_up"
        android:id="@+id/signup_signup"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginRight="40dp"
        android:layout_below="@+id/signup_email"
        android:layout_alignRight="@+id/signup_email"
        android:layout_alignEnd="@+id/signup_email"
        android:layout_marginTop="40dp"
        android:textColor="#fff"/>

    <Button
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/cancel"
        android:id="@+id/signup_cancel"
        android:layout_marginTop="40dp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_below="@+id/signup_email"
        android:layout_alignLeft="@+id/signup_email"
        android:layout_alignStart="@+id/signup_email"
        android:layout_marginLeft="40dp"
        android:textColor="#fff"/>

</RelativeLayout>