<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/message_details_sender"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/gradient"
        android:textColor="#fff"
        android:textSize="20dp"
        android:text="@string/sender"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/message_details_subject"
        android:background="@drawable/gradient"
        android:textColor="#fff"
        android:textSize="20dp"
        android:layout_below="@+id/message_details_sender"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/subject"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/message_details_message"
        android:background="@drawable/gradient"
        android:textColor="#fff"
        android:textSize="20dp"
        android:layout_below="@+id/message_details_subject"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/linearLayout3"
        android:text="@string/message"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/gradient"
        android:id="@+id/linearLayout3"
        android:gravity="center_vertical">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/reply"
            android:id="@+id/message_details_reply"
            android:background="@drawable/button"
            android:layout_weight="3"
            android:layout_marginLeft="5dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
