<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <EditText
        android:id="@+id/bank_credit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="right"
        android:hint="@string/credit"
        android:inputType="number"
        android:textColor="#fff"
        android:textColorHint="#fff"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bank_credit"
        android:layout_alignLeft="@+id/bank_credit"
        android:layout_alignStart="@+id/bank_credit"
        android:layout_marginBottom="40dp"
        android:text="@string/depts"
        android:textColor="#fff"
        android:textColorHint="#fff"/>

    <TextView
        android:id="@+id/bank_depts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bank_credit"
        android:layout_alignEnd="@+id/bank_credit"
        android:layout_alignRight="@+id/bank_credit"
        android:layout_marginBottom="40dp"
        android:text="100000"
        android:textColor="#fff"
        android:textColorHint="#fff"/>

    <Button
        android:id="@+id/bank_button_lend"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/bank_credit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/lend"
        android:textColor="#fff"
        android:textColorHint="#fff"/>

</RelativeLayout>
