<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".Fragments.NewTransportFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_select"
        android:id="@+id/textView9"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:textColor="#fff"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:id="@+id/transport_spinner_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:spinnerMode="dropdown">

    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_select"
        android:id="@+id/textView10"
        android:layout_below="@+id/transport_spinner_start"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="16dp"
        android:textColor="#fff"/>

    <Spinner
        android:id="@+id/transport_spinner_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:spinnerMode="dropdown"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friend_select"
        android:id="@+id/textView11"
        android:layout_below="@+id/transport_seekBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="16dp"
        android:textColor="#fff"/>

    <Spinner
        android:id="@+id/transport_spinner_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:spinnerMode="dropdown"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_select"
        android:id="@+id/textView12"
        android:layout_below="@+id/transport_spinner_friend"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="16dp"
        android:textColor="#fff"/>

    <Spinner
        android:id="@+id/transport_spinner_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView12"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:spinnerMode="dropdown"/>

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:id="@+id/transport_seekBar"
        android:layout_below="@+id/transport_quantity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:indeterminate="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/transport_quantity"
        android:textSize="16dp"
        android:layout_below="@+id/transport_spinner_item"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>


</RelativeLayout>
